--- a/sass/modules/about-us/_about-us-area-two.scss
+++ b/sass/modules/about-us/_about-us-area-two.scss
@@ -85,7 +85,7 @@
                         gap: 20px;
                         align-items: start;
                     }
-                    @media only screen and (min-width: 991px) and (max-width: 1439px) {
+                    @media only screen and (min-width: 991px) and (max-width: 1199px) {
                         gap: 28px;
                     }
                 }
